go-client-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  name: xiong-go-client-test
  namespace: sample
spec:
  rules:
    - host: test.com
      http:
        paths:
          - backend:
              service:
                name: server
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
status:
  loadBalancer: {}
